--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
 
       <div class="w3-third w3-center">
-        <img class="w3-round w3-animate-fadding box-anime" src="imagens/foto1.png" alt="">
+        <img class="w3-round w3-mobile w3-animate-fadding box-anime" src="imagens/foto1.png" alt="">
       </div>
 
     </div>
