--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="w3-center w3-xxlarge w3-padding-32">
 
         
-        <a href="www.linkedin.com/in/fernando-fernandes-2a327721a"><i class="fa fa-linkedin w3-hover-opacity w3-hover-azul"></i></a>
+        <a href="https://www.linkedin.com/in/fernando-fernandes-2a327721a"><i class="fa fa-linkedin w3-hover-opacity w3-hover-azul"></i></a>
 
       </div>
 
