--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
       </div>
 
       <div class="w3-center w3-padding-32">
-        <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
+        
+        <a href="projeto1.html"><img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt=""></a>
         <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
         <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
         <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
