--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <!-- Header -->
   <header class="w3-container w3-cinza-escuro  w3-center" style="padding:128px 16px">
-    <h2 class="w3-margin w3-xxxlarge ">Fernando Fernandes <i class="w3-vermelho-texto">Front End Developer</i> </h1>
+    <h2 class="w3-margin w3-xxxlarge ">Fernando Fernandes <i class="w3-vermelho-texto">Front End Developer</i> </h2>
   </header>
 
   <!-- Sobre -->
@@ -106,7 +106,7 @@
 
       <div class="w3-center w3-padding-32">
         
-        <a href="projeto1.html"><img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt=""></a>
+        <a href="projeto1.html"><img class="w3-opacity w3-hover-opacity-off" src="imagens/calculadora.svg" alt=""></a>
         <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
         <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
         <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
