--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </div>
 
   <!-- Header -->
-  <header class="w3-container w3-cinza-escuro  w3-center" style="padding:128px 16px">
+  <header class="w3-container w3-cinza-escuro w3-padding-64 w3-center">
     <h2 class="w3-margin w3-xxxlarge ">Fernando Fernandes <i class="w3-vermelho-texto">Front End Developer</i> </h2>
   </header>
 
@@ -105,12 +105,26 @@
       </div>
 
       <div class="w3-center w3-padding-32">
-        
-        <a href="projeto1.html"><img class="w3-opacity w3-hover-opacity-off" src="imagens/calculadora.svg" alt=""></a>
-        <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
-        <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
-        <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
+        <div class="image-container">
+          <a href="projeto1.html">
+            <img class="w3-opacity w3-hover-opacity-off" src="imagens/calculadora.svg" alt="">
+            <div class="caption">Gota Fácil</div>
+          </a>
+        </div>
+        <div class="image-container">
+          <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
+          <!-- <div class="caption">Legenda do Boneco 1</div> -->
+        </div>
+        <div class="image-container">
+          <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
+          <!-- <div class="caption">Legenda do Boneco 2</div> -->
+        </div>
+        <div class="image-container">
+          <img class="w3-opacity w3-hover-opacity-off" src="imagens/boneco.svg" alt="">
+          <!-- <div class="caption">Legenda do Boneco 3</div> -->
+        </div>
       </div>
+      
     </div>
   </div>
 
