--- a/projeto1.html
+++ b/projeto1.html
@@ -51,7 +51,7 @@
   </div>
 
   <!-- Header -->
-  <header class="w3-container w3-cinza-escuro  w3-center" style="padding:50px 16px">
+  <header class="w3-container w3-cinza-escuro w3-padding-64  w3-center">
     <h2 class="w3-margin w3-xxxlarge ">Gota<i class="w3-vermelho-texto">Fácil</i> </h2>
   </header>
 
