--- a/projeto1.html
+++ b/projeto1.html
@@ -56,7 +56,7 @@
   </header>
 
  
-  <div id="sobre" class="w3-row-padding w3-cinza-escuro  w3-padding w3-container">
+  <div id="sobres" class="w3-row-padding w3-cinza-escuro  w3-padding w3-container">
     <div class="w3-content">
 
       <div class="w3-twothird w3-padding-32">
